* BIG#6643 Fix select_ids in commission invoice post batch
* BUG#6619 Fix management of dunnings on non-periodic invoices
* OTH#0000 Notify with a new event when a commission invoice is generated
* BUG#6445 Manually set post parameters in batch chain
* BUG#6395 Do not override payment date if a maturity date exists
* FEA#0000 Add relate on insurer and broker parties to display invoices

Version 1.12 - 2017-04-28
* FEA#0000 A commission's base amount is equal to its amount divided by its rate.
* FEA#0000 Improve performances on invoice cancellation
* FEA#0000 Add batch chain

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Properly handle invoice de-reconciliation
* FEA#0000 Remove commission relate: use aggregated commission instead
* FEA#0000 Add extra parameter 'with_draft' to commission.invoice.post to post even draft invoices
* FEA#0000 Add relate to display received premiums
* FEA#0000 Add related view from invoice which summarize commissions by agents
* FEA#0000 Add a wizard to view paid/to pay commissions and fees for broker parties
* FEA#0000 Allow to auto-create missing agents when transferring contracts

Version 1.6 - 2015-12-23
* FEA#0000 Allow to create commission for fees
* FEA#0000 Allow to filter by broker for invoice commission generation
* FEA#0000 Group commission invoice by broker and not by agent
* FEA#0000 Allow to define computation dates on Commission Plans
* FEA#0000 Allow to define default payment term for commission invoice in configuration
* FEA#0000 Display commission rate on commission

Version 1.4 - 2015-05-29
* FEA#0000 Allow to cancel commission invoice
* FEA#0000 Add broker fee management
* FEA#0000 Automatic payment generation for broker based on configuration

Version 1.3 - 2015-01-22
* FEA#0000 Add temporal versioning to agents
* FEA#0000 Add a wizard to mass create agents
* FEA#0000 module creation