@@ -1,3 +1,4 @@
+* FEA#6642 Ajout des conditions de paiement par le protocole de commissionnement
 * BUG#6643 Correction de la génération du batch d'émission des bordereaux courtier
 * BUG#6619 Correction de la gestion des relances sur les quittances apériodiques
 * OTH#0000 Notification d'un nouvel événement lors de la génération des bordereaux de commission
