@@ -1,4 +1,5 @@
-* BIG#6643 Fix select_ids in commission invoice post batch
+* FEA#6642 Add payment term on commission agent
+* BUG#6643 Fix select_ids in commission invoice post batch
 * BUG#6619 Fix management of dunnings on non-periodic invoices
 * OTH#0000 Notify with a new event when a commission invoice is generated
 * BUG#6445 Manually set post parameters in batch chain
